<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_animacoes">

    <fragment
        android:id="@+id/nav_animacoes"
        android:name="nextu.com.animacoesgraficosmultimidia_camile_matias.ui.animacoes.AnimacoesFragment"
        android:label="@string/menu_animacoes"
        tools:layout="@layout/fragment_animacoes" />

    <fragment
        android:id="@+id/nav_graficos"
        android:name="nextu.com.animacoesgraficosmultimidia_camile_matias.ui.graficos.GraficosFragment"
        android:label="@string/menu_graficos"
        tools:layout="@layout/fragment_graficos" />

    <fragment
        android:id="@+id/nav_imagem"
        android:name="nextu.com.animacoesgraficosmultimidia_camile_matias.ui.imagem.ImagemFragment"
        android:label="@string/menu_imagem"
        tools:layout="@layout/fragment_imagem" />

    <fragment
        android:id="@+id/nav_audio"
        android:name="nextu.com.animacoesgraficosmultimidia_camile_matias.ui.audio.AudioFragment"
        android:label="@string/menu_audio"
        tools:layout="@layout/fragment_audio" />

    <fragment
        android:id="@+id/nav_video"
        android:name="nextu.com.animacoesgraficosmultimidia_camile_matias.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />
</navigation>